<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/LinLayout"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

          <EditText
                  android:id="@+id/ip_box"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/ip_adress"
                  android:inputType="text" />
    
      <LinearLayout 
        android:id="@+id/LinLayout"
          android:layout_centerInParent="true"
          android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
          

      
    <Button android:id="@+id/connect"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/connect"
        android:layout_marginTop="15dp"
    />


          <Button android:id="@+id/cancel"
          android:layout_weight="1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="15sp"
          android:text="@string/cancel"
          android:layout_marginTop="15dp"
          />
      </LinearLayout>
      
      
</LinearLayout>