<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/LinLayout"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
	    <TextView android:id="@+id/redProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Red"
            android:textColor="#ff0000"
            android:textSize="20sp" />
	         
	    <SeekBar android:id="@+id/redBar"
	        android:max="255"
	        android:layout_height="wrap_content"
	        android:layout_width="300dp"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        />
	    
	    <TextView android:id="@+id/greenProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Green"
            android:textColor="#00ff00"
            android:textSize="20sp" />
	    
	    <SeekBar android:id="@+id/greenBar"
	        android:max="255"
	        android:layout_height="wrap_content"
	        android:layout_width="300dp"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        />
	    <TextView android:id="@+id/blueProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Blue"
            android:textColor="#0000ff"
            android:textSize="20sp" />
	    
	    <SeekBar android:id="@+id/blueBar"
	        android:max="255"
	        android:layout_height="wrap_content"
	        android:layout_width="300dp"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        />
	    
	    <LinearLayout 
	    	android:id="@+id/LinLayout"
        	android:layout_centerInParent="true"
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
	        
	        <Button android:id="@+id/cancel"
    			android:layout_weight="1"
    			android:layout_width="0dip"
    			android:layout_height="wrap_content"
    			android:textSize="15sp"
    			android:text="@string/cancel"
    			android:layout_marginTop="15dp"
    			/>
    	
		<Button android:id="@+id/ok"
    		android:layout_weight="1"
    		android:layout_width="0dip"
    		android:layout_height="wrap_content"
    		android:textSize="15sp"
    		android:text="@string/ok"
    		android:layout_marginTop="15dp"
		/>
		
		<Button android:id="@+id/defaultColor"
    		android:layout_weight="1"
    		android:layout_width="0dip"
    		android:layout_height="wrap_content"
    		android:textSize="15sp"
    		android:text="@string/defaultColor"
    		android:layout_marginTop="15dp"
		/>
	    </LinearLayout>
    	
    	
    
    	
</LinearLayout>
